# AMP_mjlab

./: .gitignore  CLAUDE.md  MANIFEST.in  README.md  README_zh.md  environment.yml  environment_full.yml  nohup_casbot_zhenshicanshu_0624_zoulu_deleteturn_zhuanshen_fall  nohup_casbot_zhenshicanshu_0626_zoulu_deleteturn_zhuanshen_fall_collection_addfoot  nohup_casbot_zhenshicanshu_0626_zoulu_deleteturn_zhuanshen_fall_stl  requirements.txt  setup.py
RoboMimic_Deploy/: README.md  README_zh.md  environment.yml
RoboMimic_Deploy/FSM/: FSM.py
RoboMimic_Deploy/casbot_skeleton/: __init__.py  casbot_constants_ai.py  casbot_skeleton_25dof.xml  casbot_skeleton_25dof_collection.xml  policy.onnx  policy_0618.onnx  policy_0619.onnx  policy_0623_zoulu.onnx  policy_ai.onnx  policy_seed.onnx  scene.xml
RoboMimic_Deploy/casbot_skeleton/urdf/: CB02_URDF_ECS_WK_0904B.urdf  CB02_URDF_ECS_WK_0904B.xml
RoboMimic_Deploy/common/: utils.py
RoboMimic_Deploy/deploy_mujoco/: deploy_casbot.py  deploy_casbot1.py  deploy_casbot_keyboard.py  deploy_mujoco.py  deploy_mujoco2.py
RoboMimic_Deploy/deploy_real/: deploy_real.py
RoboMimic_Deploy/policy/beyond_mimic/: BeyondMimic.py
RoboMimic_Deploy/policy/beyond_mimic/config/: BeyondMimic.yaml
RoboMimic_Deploy/policy/casbot_amp/: CasbotAMP.py
RoboMimic_Deploy/policy/casbot_amp/config/: CasbotAMP.yaml  CasbotAMP_ai.yaml
RoboMimic_Deploy/policy/dance/: Dance.py
RoboMimic_Deploy/policy/dance/config/: Dance.yaml
RoboMimic_Deploy/policy/loco_mode/: LocoMode.py
RoboMimic_Deploy/policy/loco_mode/config/: LocoMode.yaml
RoboMimic_Deploy/policy/loco_mode/model/: 7500_waist.pt  policy.onnx
RoboMimic_Deploy/policy/mjamp/: MJAMP.py
RoboMimic_Deploy/policy/mjamp/config/: MJAMP.yaml
RoboMimic_Deploy/wbc_fsm/: .gitignore  CMakeLists.txt  README.md  README_zh.md
RoboMimic_Deploy/wbc_fsm/casbot_dds/: CMakeLists.txt
RoboMimic_Deploy/wbc_fsm/casbot_dds/include/FSM/: FSM.h  FSMState.h  State_CasbotAmp.h  State_FixedStand.h  State_Passive.h
RoboMimic_Deploy/wbc_fsm/casbot_dds/include/common/: enumClass.h  mathTools.h  mathTypes.h
RoboMimic_Deploy/wbc_fsm/casbot_dds/include/control/: ControlFrame.h  CtrlComponents.h
RoboMimic_Deploy/wbc_fsm/casbot_dds/include/interface/: IOInterface.h  IOSDK.h
RoboMimic_Deploy/wbc_fsm/casbot_dds/include/message/: LowlevelCmd.h  LowlevelState.h
RoboMimic_Deploy/wbc_fsm/casbot_dds/simulate/: casbot_mujoco_sim.py  config.py  dds_bridge.py
RoboMimic_Deploy/wbc_fsm/casbot_dds/src/: main.cpp
RoboMimic_Deploy/wbc_fsm/casbot_dds/src/FSM/: FSM.cpp  State_CasbotAmp.cpp  State_FixedStand.cpp  State_Passive.cpp
RoboMimic_Deploy/wbc_fsm/casbot_dds/src/control/: ControlFrame.cpp
RoboMimic_Deploy/wbc_fsm/casbot_dds/src/interface/: IOSDK.cpp
RoboMimic_Deploy/wbc_fsm/casbot_deploy/: CMakeLists.txt
RoboMimic_Deploy/wbc_fsm/casbot_deploy/config/: casbot_amp.json
RoboMimic_Deploy/wbc_fsm/casbot_deploy/include/: CasbotAmpDeploy.h
RoboMimic_Deploy/wbc_fsm/casbot_deploy/src/: CasbotAmpDeploy.cpp  main.cpp
RoboMimic_Deploy/wbc_fsm/casbot_ros2/: CMakeLists.txt  package.xml
RoboMimic_Deploy/wbc_fsm/casbot_ros2/config/: casbot_amp.yaml
RoboMimic_Deploy/wbc_fsm/casbot_ros2/include/casbot_ros2/: casbot_amp_node.hpp
RoboMimic_Deploy/wbc_fsm/casbot_ros2/launch/: casbot_amp.launch.py
RoboMimic_Deploy/wbc_fsm/casbot_ros2/model/: policy.onnx
RoboMimic_Deploy/wbc_fsm/casbot_ros2/src/: casbot_amp_node.cpp  main.cpp
RoboMimic_Deploy/wbc_fsm/config/: amp.json  fixedpose.json  loco.json  mjamp.json  passive.json  wbc.json
RoboMimic_Deploy/wbc_fsm/include/FSM/: FSM.h  FSMState.h  State_Amp.h  State_FixedStand.h  State_Loco.h  State_MJAmp.h  State_Passive.h  State_WBC.h
RoboMimic_Deploy/wbc_fsm/include/common/: enumClass.h  mathTools.h  mathTypes.h  read_traj.h  timeMarker.h
RoboMimic_Deploy/wbc_fsm/include/control/: ControlFrame.h  CtrlComponents.h
RoboMimic_Deploy/wbc_fsm/include/interface/: CmdPanel.h  IOInterface.h  IOSDK.h
RoboMimic_Deploy/wbc_fsm/include/message/: LowlevelCmd.h  LowlevelState.h
RoboMimic_Deploy/wbc_fsm/model/loco/: amp_0309_1.onnx  loco_0731.onnx
RoboMimic_Deploy/wbc_fsm/model/wbc/: dance12_0207_1.onnx
RoboMimic_Deploy/wbc_fsm/src/: main.cpp
RoboMimic_Deploy/wbc_fsm/src/FSM/: FSM.cpp  FSMState.cpp  State_Amp.cpp  State_FixedStand.cpp  State_Loco.cpp  State_MJAmp.cpp  State_Passive.cpp  State_WBC.cpp
RoboMimic_Deploy/wbc_fsm/src/control/: ControlFrame.cpp
RoboMimic_Deploy/wbc_fsm/src/interface/: IOSDK.cpp
mjlab_patch/mjlab/managers/: observation_manager.py
motion_data_csv/amp/: arc_jog_left_loop_002__A029.csv  arc_walk_left_loop_001__A029.csv  idle_turn_270_001__A048.csv  idle_turn_360_001__A047.csv  jog_arc_cw_loop_004__A045.csv  jog_backward_loop_002__A022.csv  jog_backward_loop_003__A023.csv  jog_forward_loop_003__A021.csv  jog_forward_loop_003__A022.csv  step_rotate_idle_000_002__A026.csv  walk_arc_cw_loop_002__A046.csv  walk_backward_loop_001__A022.csv  walk_backward_loop_001__A024.csv  walk_forward_loop_002__A022.csv  walk_forward_loop_002__A024.csv  walk_sideway_left_loop_002__A021.csv  walk_sideway_right_loop_001__A022.csv
motion_data_npz/amp/WalkandRun/: arc_jog_left_loop_002__A029.npz  arc_walk_left_loop_001__A029.npz  idle_turn_270_001__A048.npz  idle_turn_360_001__A047.npz  jog_arc_cw_loop_004__A045.npz  jog_backward_loop_002__A022.npz  jog_backward_loop_003__A023.npz  jog_forward_loop_003__A021.npz  jog_forward_loop_003__A022.npz  step_rotate_idle_000_002__A026.npz  walk_arc_cw_loop_002__A046.npz  walk_backward_loop_001__A022.npz  walk_backward_loop_001__A024.npz  walk_forward_loop_002__A022.npz  walk_forward_loop_002__A024.npz  walk_sideway_left_loop_002__A021.npz  walk_sideway_right_loop_001__A022.npz
rsl_rl/algorithms/: amp_ppo.py
scripts/: convert_casbot_motion.py  csv_to_npz.py  play.py  replay_motion.py
src/assets/robots/: __init__.py
src/assets/robots/casbot_skeleton/: casbot_constants.py  casbot_constants_collection.py  casbot_constants_ts.py  casbot_constants_ys.py  (+1 more)
src/tasks/amp_loco/: amp_env_cfg.py  amp_env_cfg_dr.py  amp_env_cfg_yuanban.py
(+57 files in other folders)
